<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chenghao.mytb.Fragments.GetWeatherFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|bottom">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">
            <TextView android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/city"
                android:textSize="20dp"
                android:textColor="#00002f"/>
            <EditText android:layout_height="wrap_content"
                android:layout_width="180dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/set_city"
                android:hint="@string/input_city"
                android:maxLines="1"
                android:textSize="20dp"/>
            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:id="@+id/search"
                android:text="@string/search"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:isScrollContainer="true">
                <TextView android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:textColor="#3f2f2f"
                    android:text="@string/today"
                    android:visibility="gone"
                    android:id="@+id/today_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/td_weather"
                    android:textSize="18dp"
                    android:textColor="#5f5f5f"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/td_temperature"
                    android:textSize="18dp"
                    android:textColor="#5f5f5f"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/td_wind"
                    android:textSize="18dp"
                    android:textColor="#5f5f5f"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/td_dressing_advice"
                    android:textSize="18dp"
                    android:textColor="#5f5f5f"
                    />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
